<resources>
    <string name="app_name">Task_3_Side_Navigation_&amp;_Media_Fetching</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome</string>
    <string name="nav_header_subtitle">Tech.Swivel@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="videos">Videos</string>
    <string name="images">Images</string>
    <string name="audio">Audio</string>
    <string name="capture_video">Capture video</string>
    <string name="record_audio">Record audio</string>
    <string name="capture_image">Capture Image</string>
    <string name="import_video_from_gallery">Import from gallery</string>
    <string name="import_from_storage">Import from storage</string>
    <string name="select_an_option">--------Select an option--------</string>
    <string name="play_audio">Play audio</string>
    <string name="recording_tap_to_stop">Recording, Tap to stop...</string>
    <string name="stop">Stop</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="no_data_found">No data found</string>
    <string name="recording_failed">Recording failed</string>
    <string name="recording_stop">Recording stopped</string>
    <string name="audio_imported">Audio imported</string>
    <string name="camera_permission_needed">Camera Permission Needed</string>
    <string name="requires_camera_access">This app requires camera access to capture images.</string>
    <string name="settings">Go to settings</string>
    <string name="storage_permission_needed">Storage permission needed</string>
    <string name="requires_storage_access">This application requires storage permission to access images</string>
    <string name="requires_storage_access_audio">This application requires storage permission to access audio</string>
    <string name="requires_storage_access_video">This application requires storage permission to access videos</string>
    <string name="mic_permission_needed">Mic permission needed</string>
    <string name="requires_mic_access">This application requires mic permission to record audio</string>
    <string name="requires_camera_access_video">This application requires camera access to capture videos</string>
    <string name="ok">Okay</string>
    <string name="granted">Granted</string>
    <string name="denied">Denied</string>

</resources>