<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.task_3_side_navigation__media_fetching.ui.video.VideoFragment"
        android:label="@string/videos"
        tools:layout="@layout/fragment_video" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.task_3_side_navigation__media_fetching.ui.image.ImageFragment"
        android:label="@string/images"
        tools:layout="@layout/fragment_image" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.task_3_side_navigation__media_fetching.ui.audio.AudioFragment"
        android:label="@string/audio"
        tools:layout="@layout/fragment_audio" />
</navigation>