<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    android:orientation="vertical"
    tools:context=".ui.video.VideoFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/select_an_option"
        android:textColor="@color/black"
        android:textSize="@dimen/_17sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_5dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginRight="@dimen/_5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/captureVideo"
            android:layout_width="@dimen/_160dp"
            android:layout_height="@dimen/_80dp"
            android:layout_marginLeft="@dimen/_10dp"
            android:layout_marginRight="@dimen/_16dp"
            android:background="@drawable/rounded_button"
            android:drawableBottom="@drawable/capture_video"
            android:text="@string/capture_video"
            android:textColor="@color/white"
            android:textSize="@dimen/_17sp" />

        <Button
            android:id="@+id/importVideoFromGallery"
            android:layout_width="@dimen/_160dp"
            android:layout_height="@dimen/_80dp"
            android:layout_marginRight="@dimen/_16dp"
            android:background="@drawable/rounded_button"
            android:drawableBottom="@drawable/video_gallery"
            android:text="@string/import_video_from_gallery"
            android:textColor="@color/white"
            android:textSize="@dimen/_17sp" />
    </LinearLayout>


    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_5dp"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/videoThumbnailContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/videoThumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_5dp"
            android:scaleType="centerCrop" />

        <ImageView
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/play" />

    </FrameLayout>


</LinearLayout>